@@ -8,12 +8,12 @@ import com.filesplitter.FileSplitter.mapper.ConstantMapper;
 import com.filesplitter.FileSplitter.mapper.DirectMapper;
 import com.filesplitter.FileSplitter.mapper.PairMapper;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 public class ColumnMapperFactory {
 
-  private static final List<DirectMapper> COMMON_DIRECT_MAPPERS = Arrays.asList(
+  private static final List<DirectMapper> COMMON_DIRECT_MAPPERS = List.of(
       new DirectMapper(JudiColumn.CARRIER_ID.getIndex(), PrimeColumn.CARRIER_ID.getIndex()),
       new DirectMapper(JudiColumn.ACCT_NUMBER.getIndex(), PrimeColumn.ACCT_NUMBER.getIndex()),
       new DirectMapper(JudiColumn.GROUP_NUMBER.getIndex(), PrimeColumn.GROUP_NUMBER.getIndex()),
@@ -24,35 +24,38 @@ public class ColumnMapperFactory {
       new DirectMapper(JudiColumn.DATE_OF_SERVICE.getIndex(), PrimeColumn.FULL_DATE_OF_TRANSACTION.getIndex())
   );
 
-  private static final List<ConstantMapper> CONSTANT_MAPPERS = Arrays.asList(
+  private static final List<ConstantMapper> CONSTANT_MAPPERS = List.of(
       new ConstantMapper("P", PrimeColumn.MEDICAL_OR_PHARMACY.getIndex())
   );
 
-  private static final List<ColumnMapper> ALT_FALSE_COLUMN_MAPPERS = getColumnMappers(false);
+  private static final List<ColumnMapper> ALT_FALSE_COLUMN_MAPPERS = getColumnMappersForFileType(false);
 
-  private static final List<ColumnMapper> ALT_TRUE_COLUMN_MAPPERS = getColumnMappers(true);
+  private static final List<ColumnMapper> ALT_TRUE_COLUMN_MAPPERS = getColumnMappersForFileType(true);
 
-  public static List<ColumnMapper> getColumnMappersForFile(String filename) {
-    boolean isAltFile = filename.contains("ALT");
+  public static List<ColumnMapper> getColumnMappers(String filename) {
+    boolean isAltFile = filename.contains("_ALT");
     return isAltFile ? ALT_TRUE_COLUMN_MAPPERS : ALT_FALSE_COLUMN_MAPPERS;
   }
 
-  private static List<ColumnMapper> getColumnMappers(boolean isAltFile) {
-    List<ColumnMapper> columnMappers = new ArrayList<>(COMMON_DIRECT_MAPPERS);
+  private static List<ColumnMapper> getColumnMappersForFileType(boolean isAltFile) {
+    List<ColumnMapper> columnMappers = new ArrayList<>();
+    columnMappers.addAll(COMMON_DIRECT_MAPPERS);
+    columnMappers.addAll(getConstantMappers(isAltFile));
     columnMappers.addAll(getDeductiblePairMappers(isAltFile));
     columnMappers.addAll(getOopPairMappers(isAltFile));
-    return columnMappers;
+    columnMappers.addAll(getConcatMappers());
+    return Collections.unmodifiableList(columnMappers);
   }
 
   private static List<ConstantMapper> getConstantMappers(boolean isAltFile) {
-    return Arrays.asList(
-        new ConstantMapper(isAltFile ? "Y" : "N", PrimeColumn.INDIVIDUAL_MARKET_INDICATOR.getIndex()),
-        new ConstantMapper(isAltFile ? "Y" : "N", PrimeColumn.DUAL_ADJUDICATION_INDICATOR.getIndex())
-    );
+    List<ConstantMapper> constantMappers = new ArrayList<>(CONSTANT_MAPPERS);
+    constantMappers.add(new ConstantMapper(isAltFile ? "Y" : "N", PrimeColumn.INDIVIDUAL_MARKET_INDICATOR.getIndex()));
+    constantMappers.add(new ConstantMapper(isAltFile ? "Y" : "N", PrimeColumn.DUAL_ADJUDICATION_INDICATOR.getIndex()));
+    return constantMappers;
   }
 
   private static List<ConcatMapper> getConcatMappers() {
-    return Arrays.asList(new ConcatMapper(
+    return List.of(new ConcatMapper(
         new int[]{
             JudiColumn.CLAIM_ID.getIndex(),
             JudiColumn.REAL_CLAIM_NUMBER.getIndex(),
@@ -67,7 +70,7 @@ public class ColumnMapperFactory {
   private static List<PairMapper> getDeductiblePairMappers(boolean isAltFile) {
     int amountColumnIndex = isAltFile ? PrimeColumn.DEDUCTIBLE_ALTERNATE_DOLLAR_AMOUNT_NEEDED_FROM_PRIME.getIndex()
         : PrimeColumn.DEDUCTIBLE_REAL_DOLLAR_AMOUNT_NEEDED_FROM_PRIME.getIndex();
-    return Arrays.asList(
+    return List.of(
         new PairMapper(
             new int[]{JudiColumn.DED_BOTH.getIndex(), JudiColumn.DED_BOTH_AMOUNT.getIndex()},
             PrimeColumn.DEDUCTIBLE_ACCUM_CODE.getIndex(),
@@ -99,7 +102,7 @@ public class ColumnMapperFactory {
   private static List<PairMapper> getOopPairMappers(boolean isAltFile) {
     int amountColumnIndex = isAltFile ? PrimeColumn.OUT_OF_POCKET_ALTERNATE_DOLLAR_AMOUNT_NEEDED_FROM_PRIME.getIndex()
         : PrimeColumn.OUT_OF_POCKET_REAL_DOLLAR_AMOUNT_NEEDED_FROM_PRIME.getIndex();
-    return Arrays.asList(
+    return List.of(
         new PairMapper(
             new int[]{JudiColumn.OOP_BOTH.getIndex(), JudiColumn.OOP_BOTH_AMOUNT.getIndex()},
             PrimeColumn.OUT_OF_POCKET_ACCUM_CODE.getIndex(),
